--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pydantic = {extras = ["email"], version = "*"}
 bcrypt = "*"
 asyncpg = "*"
 python-jose = {extras = ["cryptography"], version = "*"}
+alembic = "*"
 
 [dev-packages]
 pytest = "*"
