--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,20 @@
 version: '3.9'
 
 services:
-  postgres_db:
-    container_name: postgres_fastapi
+  fastapi:
+    container_name: fastapi
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    environment:
+      - DATABASE_URL=postgresql://Dev:hello@db:5432/development_db
+    command: sh -c './wait-for db:5432 && alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000'
+    depends_on:
+      - db
+  db:
+    container_name: postgres
     restart: always
     image: postgres
     environment:
